--- a/charts/dromo/subcharts/celerybeat/templates/deployment.yaml
+++ b/charts/dromo/subcharts/celerybeat/templates/deployment.yaml
@@ -42,14 +42,14 @@ spec:
             - name: http
               containerPort: {{ .Values.port }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+#          livenessProbe:
+#            httpGet:
+#              path: /
+#              port: http
+#          readinessProbe:
+#            httpGet:
+#              path: /
+#              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
