--- a/charts/dromo/subcharts/redis/templates/service.yaml
+++ b/charts/dromo/subcharts/redis/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: redis
+      targetPort: tcp-redis
       protocol: TCP
       name: tcp-redis
   selector:
