--- a/charts/dromo/templates/env-configmap.yaml
+++ b/charts/dromo/templates/env-configmap.yaml
@@ -5,7 +5,11 @@ metadata:
 data:
     CELERY_FLOWER_PASSWORD: {{ .Values.global.celery.flower_password }}
     CELERY_FLOWER_USER: {{ .Values.global.celery.flower_user }}
+   {{- if .Values.postgresql.enabled }}
+    DATABASE_URL: "postgres://{{ .Values.postgresql.auth.username }}:{{ .Values.postgresql.auth.password }}@{{ .Release.Name }}-postgresql:{{ .Values.postgresql.service.ports.postgresql }}/{{ .Values.postgresql.auth.database }}"
+   {{- else }}
     DATABASE_URL: "postgres://{{ .Values.global.postgres.user }}:{{ .Values.global.postgres.password }}@{{ .Values.global.postgres.host }}:{{ .Values.global.postgres.port }}/{{ .Values.global.postgres.db }}"
+   {{- end }}
     DEPLOYMENT_TYPE_ON_PREM: "{{ .Values.global.deploy_type_on_prem }}"
     DJANGO_ADMIN_URL: {{ .Values.global.django.admin_url }}
     DJANGO_ALLOWED_HOSTS: "{{ .Values.global.django.allowed_hosts }}"
@@ -16,11 +20,19 @@ data:
     DJANGO_SECRET_KEY: {{ .Values.global.django.secret_key }}
     DJANGO_SETTINGS_MODULE: config.settings.production
     IPYTHONDIR: {{ .Values.global.ipythondir }}
+   {{- if .Values.postgresql.enabled }}
+    POSTGRES_DB: {{ .Values.postgresql.auth.database }}
+    POSTGRES_HOST: {{ .Release.Name }}-postgresql
+    POSTGRES_PASSWORD: {{ .Values.postgresql.auth.password }}
+    POSTGRES_PORT: "{{ .Values.postgresql.service.ports.postgresql }}"
+    POSTGRES_USER: {{ .Values.postgresql.auth.username }}
+   {{- else }}
     POSTGRES_DB: {{ .Values.global.postgres.db }}
     POSTGRES_HOST: {{ .Values.global.postgres.host }}
     POSTGRES_PASSWORD: {{ .Values.global.postgres.password }}
     POSTGRES_PORT: "{{ .Values.global.postgres.port }}"
     POSTGRES_USER: {{ .Values.global.postgres.user }}
+    {{- end }}
     REDIS_URL: "redis://redis:6379/0"
     SENDGRID_API_KEY: {{ .Values.global.sendgrid_api_key }}
     SENDGRID_GENERATE_MESSAGE_ID: "{{ .Values.global.sendgrid_generate_message_id }}"
