add version to Chart.yaml

--- a/charts/dromo/Chart.yaml
+++ b/charts/dromo/Chart.yaml
@@ -16,9 +16,11 @@ appVersion: "0.1.0"
 
 dependencies:
   - name: aws-ecr-credentials
+    version: 0.1.0
     repository: file://./subcharts/aws-ecr-credentials
     condition: aws-ecr-credentials.enabled
   - name: redis
+    version: 0.1.0
     repository: file://./subcharts/redis
     condition: redis.enabled
   - name: postgresql
@@ -26,12 +28,15 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
   - name: django
+    version: 0.1.0
     repository: file://./subcharts/django
     condition: django.enabled
   - name: celeryworker
+    version: 0.1.0
     repository: file://./subcharts/celeryworker
     condition: celeryworker.enabled
   - name: celerybeat
+    version: 0.1.0
     repository: file://./subcharts/celerybeat
     condition: celerybeat.enabled
 maintainers:
