--- a/charts/dromo/values.yaml
+++ b/charts/dromo/values.yaml
@@ -57,9 +57,9 @@ django:
       cpu: "0.2"
 
   dbMigration:     # set to true to run manage.py migrate
-    enabled: true
+    enabled: false
   createSuperuser: # set to true only for the first install
-    enabled: true
+    enabled: false
 
 # ALB ingress
   ingress:
