disable django health check

--- a/charts/dromo/subcharts/django/templates/deployment.yaml
+++ b/charts/dromo/subcharts/django/templates/deployment.yaml
@@ -67,14 +67,14 @@ spec:
             - name: http
               containerPort: {{ .Values.port }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /ping
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /ping
-              port: http
+#          livenessProbe:
+#            httpGet:
+#              path: /ping
+#              port: http
+#          readinessProbe:
+#            httpGet:
+#              path: /ping
+#              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
