Change redis image to ECR for TLS use

--- a/charts/dromo/subcharts/redis/values.yaml
+++ b/charts/dromo/subcharts/redis/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: redis
+  repository: 122220516134.dkr.ecr.us-west-1.amazonaws.com/redis_tls
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "5.0"
+  tag: "6.2"
 
 imagePullSecrets: []
 nameOverride: ""
