--- a/charts/dromo/values.yaml
+++ b/charts/dromo/values.yaml
@@ -24,7 +24,7 @@ postgresql:
 redis:
   enabled: true
   image:
-    tag: "6.2"
+    tag: "latest"
     repository: 122220516134.dkr.ecr.us-west-1.amazonaws.com/redis_tls
   url: "rediss://redis:6379/0?ssl_cert_reqs=CERT_REQUIRED&ssl_keyfile=%2Fvar%2Ftls%2Fredis%2Fredis.key&ssl_certfile=%2Fvar%2Ftls%2Fredis%2Fredis.crt&ssl_ca_certs=%2Fvar%2Ftls%2Fredis%2Fca.crt"
   imagePullSecrets:
