--- a/charts/dromo/templates/env-configmap.yaml
+++ b/charts/dromo/templates/env-configmap.yaml
@@ -17,7 +17,7 @@ data:
     DJANGO_AWS_STORAGE_BUCKET_NAME: {{ .Values.global.django.aws_storage_bucket_name }}
     DJANGO_SECRET_KEY: {{ .Values.global.django.secret_key }}
     DJANGO_SETTINGS_MODULE: config.settings.production
-    IPYTHONDIR: {{ .Values.global.ipythondir }}
+    IPYTHONDIR: "/app/.ipython"
    {{- if .Values.postgresql.enabled }}
     POSTGRES_DB: {{ .Values.postgresql.auth.database }}
     POSTGRES_HOST: {{ .Release.Name }}-postgresql
@@ -31,7 +31,7 @@ data:
     POSTGRES_PORT: "{{ .Values.global.postgres.port }}"
     POSTGRES_USER: {{ .Values.global.postgres.user }}
     {{- end }}
-    REDIS_URL: "{{ .Values.redis.url }}" 
+    REDIS_URL: "{{ .Values.redis.url }}"
     SENDGRID_API_KEY: {{ .Values.global.sendgrid_api_key }}
     SENDGRID_GENERATE_MESSAGE_ID: "{{ .Values.global.sendgrid_generate_message_id }}"
     SENDGRID_MERGE_FIELD_FORMAT: {{ .Values.global.sendgrid_merge_field_format }}
