--- a/charts/dromo/subcharts/aws-ecr-credentials/templates/cron.yaml
+++ b/charts/dromo/subcharts/aws-ecr-credentials/templates/cron.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "aws-ecr-credentials.cronJob" . }}
@@ -8,7 +8,7 @@ metadata:
 spec:
   schedule: "{{ .Values.cron }}"
   successfulJobsHistoryLimit: 2
-  failedJobsHistoryLimit: 2  
+  failedJobsHistoryLimit: 2
   jobTemplate:
     spec:
       backoffLimit: 4
